<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="#ffffff"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.ams.panel.ExpandablePanel xmlns:panel="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sensorPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        panel:expanded_view="@+id/container"
        panel:less="@drawable/ic_expand_less"
        panel:more="@drawable/ic_expand_more"
        panel:main_view="@+id/btnExpand">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExpand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                panel:layout_constraintTop_toTopOf="parent"
                android:gravity="center_vertical"
                android:text="@string/sensors_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                panel:layout_constraintTop_toBottomOf="@id/btnExpand"
                android:layout_height="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensors_accelerometer_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="#aaaaaa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensors_accelerometer_value"
                    android:textColor="#aaaaaa"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.ams.panel.ExpandablePanel>

</androidx.cardview.widget.CardView>
